--- a/src/app/comments/comments.page.scss
+++ b/src/app/comments/comments.page.scss
@@ -1,4 +1,30 @@
-ion-toolbar{
-    border-radius: 10px;
-    // margin-top: 25px;
-  }
+.content {
+    .top-space {
+        padding-top: 10px;
+        .image {
+            img {
+                width: 30px; 
+                height: 30px; 
+                border-radius: 50%;
+            }
+        }
+        .description {
+            margin-left: 40px; 
+            margin-top: -35px;  
+            color: #737373;  
+            margin-bottom: 5px;
+            ion-label {
+                font-size: 13px; 
+                font-weight: bold;
+                span {
+                    font-weight: normal; 
+                    font-size: 10px; 
+                    margin-left: 5px;
+                }
+            }
+            ion-text {
+                font-size: 12px;
+            }
+        }
+    }
+}
