--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -1,34 +1,40 @@
+<ion-header>
+    <ion-toolbar color="primary">
+        <ion-buttons style="margin-left: 10px; margin-right: 10px;">
+            <ion-icon name="arrow-back" style="width: 20px; height: 20px;" (click)="close()"></ion-icon>
+            <ion-title text-center>customers</ion-title>
+        </ion-buttons>
+      </ion-toolbar>
+</ion-header>
+
+
+
 <ion-content>
-  <ion-toolbar color="primary" padding>
-    <ion-buttons>
-      <ion-icon name="arrow-back" (click)="close()"></ion-icon>
-      <ion-title>customers</ion-title>
-    </ion-buttons>
-    
-  </ion-toolbar>
-<div>
-  <ion-list>
-    <ion-row  *ngFor="let item of customer">
-      <ion-col size="2" padding>
-        <ion-avatar>
-          <ion-icon name="person" color="medium"></ion-icon>
-        </ion-avatar>
-      </ion-col>
-      <ion-col size="7">
-        <ion-label color="dark"> {{item.name}}</ion-label><br>
-        <ion-label color="dark">Contact: {{item.phone}}</ion-label>
-      </ion-col>
-      <ion-col padding size="3">
-        <ion-icon name="call" color="success"></ion-icon>&nbsp;&nbsp;
-        <ion-icon name="mail" color="medium"></ion-icon>
-      </ion-col>
-    </ion-row>
-  </ion-list>
-</div>
-<ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="addCustomer()">
-  <ion-fab-button>
-    <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
+
+    <ion-list style="margin-left: 10px; margin-right: 10px;">
+        <ion-row  *ngFor="let item of customer">
+            <ion-item no-padding style="width: 100%;">
+                <div>
+                    <ion-icon style="width: 28px; height: 28px; background-color: var(--ion-color-primary); color: #f3f3f3; border-radius: 15px;" name="person"></ion-icon>
+                </div>
+                <div style="color: #737373; margin-left: 10px;">
+                    <div style="font-size: 14px; font-weight: bold;">{{item.name}}</div>
+                    <div style="font-size: 12px;">Contact: {{item.phone}}</div>
+                </div>
+                <div style="float: right; right: 0px; position: absolute;">
+                    <ion-icon style="width: 20px; height: 20px;" name="call" color="success"></ion-icon>&nbsp;&nbsp;
+                    <ion-icon style="width: 20px; height: 20px;" name="mail" color="primary"></ion-icon>
+                </div>
+            </ion-item>
+        </ion-row>
+    </ion-list>
+
+
+
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="addCustomer()">
+        <ion-fab-button size="small">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 
 </ion-content>
