--- a/src/app/infomodal/infomodal.page.html
+++ b/src/app/infomodal/infomodal.page.html
@@ -1,20 +1,17 @@
-<ion-header style="background-color: #3880ff;"  > 
-  <ion-toolbar color="primary" class="ion-padding">
-      <ion-buttons (click)="close()" slot="start">
-          <ion-icon name="arrow-back" ></ion-icon>
+<ion-header> 
+    <ion-toolbar color="primary">
+        <ion-buttons (click)="close()" slot="start" style="margin-left: 10px;">
+            <ion-icon style="width: 20px; height: 20px;" name="arrow-back" ></ion-icon>
         </ion-buttons>
 
-      <ion-title *ngIf="!showSearch">{{shopname}}</ion-title>
+        <ion-title text-center *ngIf="!showSearch">{{shopname}}</ion-title>
 
+        <ion-searchbar *ngIf="showSearch" placeholder="Search for a shop "animated type="text"></ion-searchbar>
 
-      <ion-searchbar *ngIf="showSearch" placeholder="Search for a shop "animated type="text"></ion-searchbar>
-
-      <ion-buttons slot="end"  style="padding-right: 5px;">
-          <ion-button (click)="show()">
-              <ion-icon size="large" name="search"></ion-icon>
-          </ion-button>
-      </ion-buttons>
-  </ion-toolbar>
+        <ion-buttons (click)="show()" slot="end" style="margin-right: 10px;">
+            <ion-icon style="width: 20px; height: 20px;" size="small" name="search"></ion-icon>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
