--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -1,47 +1,48 @@
-<ion-header color="primary">
-  <ion-toolbar color="primary" padding>
-    <!-- <ion-buttons slot="start" (click)="back()">
-      <ion-icon name="arrow-back" size="large"></ion-icon>
-    </ion-buttons> -->
-    <ion-title>
-      Notifications
-    </ion-title>
-  </ion-toolbar>
-
+<ion-header>
+    <ion-toolbar color="primary">
+        <!-- <ion-buttons slot="start" (click)="back()">
+        <ion-icon name="arrow-back" size="large"></ion-icon>
+        </ion-buttons> -->
+        <ion-title text-center>Notifications</ion-title>
+    </ion-toolbar>
 </ion-header>
+
+
+
 <ion-content>
-  <div style="text-align: center;margin-top: 40%;" *ngIf="none">
-    <div class="icon">
-    <ion-icon  size="large" src="../../assets/images/alarm.svg"></ion-icon>
-  </div>
-  <ion-spinner  *ngIf="!none" color="primary"></ion-spinner>
-  <br><br><br>
-    <ion-label >You have no notifications</ion-label>
-  </div>
-  <div>
-    <ion-card *ngFor="let item of notices"  [ngClass]="{'unread': item.status == 'unread'}">
-      <ion-row padding>
-        <ion-col size="3" >
-          <ion-avatar>
-            <img src="../../assets/images/icon.png">
-          </ion-avatar>
-        </ion-col>
-        <ion-col style="text-align: left;padding-top: 20px;">
-          <ion-label>{{item.Title}}</ion-label><br>
-          <ion-label>{{ item.Date.toDate() | date }}</ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-card-content>
-        <p>
-          A New  order for : 
-        </p>
-        <blockquote>
-         <span *ngFor="let n of item.message">{{n}}&nbsp;,</span>
-        </blockquote>
-        
-      </ion-card-content>
-    </ion-card>
-  </div>
+    <div style="text-align: center; margin-top: 40%;" *ngIf="none">
+        <div class="icon">
+            <ion-icon  size="large" src="../../assets/images/alarm.svg"></ion-icon>
+        </div>
+        <ion-spinner  *ngIf="!none" color="primary"></ion-spinner><br>
+        <ion-label style="color: #737373; font-size: 13px;">You have no notifications</ion-label>
+    </div>
+
+
+    <div>
+        <ion-card *ngFor="let item of notices"  [ngClass]="{'unread': item.status == 'unread'}">
+        <ion-row padding>
+            <ion-col size="3" >
+            <ion-avatar>
+                <img src="../../assets/images/icon.png">
+            </ion-avatar>
+            </ion-col>
+            <ion-col style="text-align: left;padding-top: 20px;">
+            <ion-label>{{item.Title}}</ion-label><br>
+            <ion-label>{{ item.Date.toDate() | date }}</ion-label>
+            </ion-col>
+        </ion-row>
+        <ion-card-content>
+            <p>
+            A New  order for : 
+            </p>
+            <blockquote>
+            <span *ngFor="let n of item.message">{{n}}&nbsp;,</span>
+            </blockquote>
+            
+        </ion-card-content>
+        </ion-card>
+    </div>
   <!-- <div class="ion-text-center" style="margin-top: 200px;">
     <ion-icon size="large" name="flash"></ion-icon><br>
     <ion-label>You have no Notifications</ion-label>
