--- a/src/app/productmodal/productmodal.page.scss
+++ b/src/app/productmodal/productmodal.page.scss
@@ -3,14 +3,14 @@
     background-color: white;
     border-radius: 20px 20px 0px 0px;
     width: 100%;
-    height: max-content;
-    padding-bottom: 50px;
-    margin-bottom: 0px;
-    margin-top: 30px;
+    position: fixed;
+    bottom: 0px;
+    top: 100px;
+    overflow-y:scroll;
 }
 .title{
     font-weight: bold;
-    font-size: 1.4em;
+    font-size: 15px;
 }
 .image{
     object-fit: contain;
