--- a/src/app/stock/stock.page.html
+++ b/src/app/stock/stock.page.html
@@ -1,72 +1,73 @@
 <ion-content color="primary" style="background-color: var(--ion-color-primary);">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start" padding>
-      <ion-icon name="home" (click)="home()"></ion-icon>
-    </ion-buttons>
-    <ion-title>Stock</ion-title>
-    <ion-buttons slot="end" padding>
-      <ion-icon name="settings" (click)="settings()"></ion-icon>
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-icon style="width: 20px; height: 20px; margin-left: 5px;" name="arrow-back" (click)="home()"></ion-icon>
+        </ion-buttons>
+        <ion-title text-center>Stock</ion-title>
+        <ion-buttons slot="end">
+            <ion-icon style="width: 20px; height: 20px; margin-right: 5px;" name="settings" (click)="settings()"></ion-icon>
+        </ion-buttons>
+    </ion-toolbar>
 
-  <div class="card-main" style="background-color: white;">
-    <ion-card-title padding>
-      <ion-row>
-        <ion-col>
-          <ion-label class="title">Choose category</ion-label>
-          <ion-select placeholder="category" [(ngModel)]="category" *ngIf="show" (ionChange)="filterProducts()">
-            <ion-select-option *ngFor="let item of categories.categories">{{item}}</ion-select-option>
-          </ion-select>
-        </ion-col>
-        <ion-col>
-          <ion-icon name="pricetags" src="" class="image" color="primary"></ion-icon>
-        </ion-col>
-      </ion-row>
-    </ion-card-title>
+    
+    <div class="card-main" style="background-color: white;">
+        <ion-card-title no-padding>
+            <ion-row  style="margin-top: 10px;">
+                <ion-col>
+                    <ion-label class="title">Choose category</ion-label>
+                    <ion-select style="font-size: 15px; margin-left: -10px;" placeholder="category" [(ngModel)]="category" *ngIf="show" (ionChange)="filterProducts()">
+                        <ion-select-option *ngFor="let item of categories.categories">{{item}}</ion-select-option>
+                    </ion-select>
+                </ion-col>
+                <ion-col>
+                    <ion-icon name="pricetags" class="image" color="primary"></ion-icon>
+                </ion-col>
+            </ion-row>
+        </ion-card-title>
 
-    <ion-card-content class="content">
-      <div>
+        <ion-card-content class="content">
+            <div>
+                <ion-label>Low on stock</ion-label>
+                <div style="color: #737373; font-size: 13px; margin-top: 10px;">
+                    <div>You haven't set any Stock alerts on your products.</div>
+                    <div style="margin-top: 10px;">Go to <ion-icon name="settings"></ion-icon> and get started</div>
+                </div>
+            </div>
 
-        <ion-label>Low on stock</ion-label>
+            <div>
+                <div class="section-two">
+                    <ion-label>Available products</ion-label>
+                    <ion-icon name="git-compare" class="float" (click)="sortCategory()"></ion-icon>
+                </div>
 
-        <div class="ion-text-center ion-padding">
-          <ion-text color="medium">You haven't set any Stock  alerts on your products.</ion-text><br><br>
-          <ion-text>Go to &nbsp;&nbsp; <ion-icon name="settings"></ion-icon> &nbsp;&nbsp;and get started</ion-text>
-        </div>
-      </div>
+                <ion-spinner name="circles" color="primary" *ngIf="products.length  == 0" class="spinner"></ion-spinner>
+                <ion-card no-padding class="stock" style="margin-left: -5px; margin-right: -5px;" *ngFor="let item of products" (click)="viewProduct(item)">
+                    <ion-row style="margin-top: 10px; margin-bottom: 10px;">
+                        <div style="margin-left: 10px;">
+                            <ion-icon size="large" color="success" name="trending-up"></ion-icon>
+                        </div>
+                        <div style="margin-left: 10px;">
+                            <div style="font-size: 15px; font-weight: bold;">
+                                {{item.product}}
+                            </div>
+                            <div style="font-size: 13px; color: #737373;">
+                                Last updated <b style="color: var(--ion-color-primary);">4</b> days ago
+                            </div>
+                        </div>
+                        <div style="position: absolute; float: right; right: 0px; margin-right: 10px; font-size: 15px; color: var(--ion-color-primary);">
+                            {{item.stock}}
+                        </div>
+                    </ion-row>
+                </ion-card>
+            </div>
+        </ion-card-content>
 
-      <div>
-        
-        <div class="section-two">
-          <ion-label>Available products</ion-label>
-          <ion-icon name="git-compare" class="float" (click)="sortCategory()"></ion-icon>
-        </div>
-        <ion-spinner name="circles" color="primary" *ngIf="products.length  == 0" class="spinner"></ion-spinner>
-        <ion-card class="stock" padding *ngFor="let item of products" (click)="viewProduct(item)">
-          <ion-row>
-            <ion-col size="2">
-              <ion-icon size="large" color="success" name="trending-up"></ion-icon>
-            </ion-col>
-            <ion-col size="7">
-              <ion-text>
-                {{item.product}} <br> Last updated <span>4</span> days ago
-              </ion-text>
-            </ion-col>
-            <ion-col size="3">
-              <ion-label>{{item.stock}}</ion-label>
-            </ion-col>
-          </ion-row>
-        </ion-card>
-
-      </div>
-
-    </ion-card-content>
-   
-  </div>
+    </div>
  
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="addProduct()">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="addProduct()">
+        <ion-fab-button size="small">
+        <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+
 </ion-content>
